<resources>
    <string name="app_name">利世优品</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_main1">首页</string>
    <string name="text_main2">分类</string>
    <string name="text_main3">购物车</string>
    <string name="text_main4">我的</string>
    <string name="item_cart_title">联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者联想(lenovo）拯救者</string>
    <string name="item_cart_info">颜色：6代新平台15.6寸6代新平台15.6寸6代新平台15.6寸6代新平台15.6寸</string>
    <string name="item_cart_price">￥</string>
    <string name="text_cart_checkbox">全选</string>
    <string name="text_cart_add">合计 : </string>
    <string name="text_cart_count">去结算</string>
    <string name="text_cart_bom">再去逛逛呗</string>
    <string name="text_recommend_brief">三味书屋-手帕+香水30*30（订购从速，赶紧的。啦啦啦啦啦啦啦啦）</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="pull_to_refresh">加载</string>
    <string name="pullup_to_load">加载1</string>
    <string name="release_to_refresh">刷新中</string>
    <string name="refreshing">正在刷新</string>
    <string name="release_to_load">正在加载</string>
    <string name="loading">正在加载</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="my_usermanager">帐号管理</string>
    <string name="my_integral1">福币余额</string>
    <string name="my_integral3">可用积分</string>
    <string name="my_integral2">代金券</string>
    <string name="my_mycollect_storename">百姓图腾</string>
    <string name="details_brief">  百姓图腾 手工恒温56°紫砂CEO杯，恒温紫砂CEO杯，养生佳品，用恒定温度呵护血管健康。全天24小时为你提供56°的贴心守望。恒心56°，是对心脏最好的温度.高端定制姓氏家徽，为你打造独一无二的专属尊贵。</string>
    <string name="details_name">产品名称：</string>
    <string name="details_model">产品型号：</string>
    <string name="details_standard">产品规格：</string>
    <string name="details_material">产品材质：</string>
    <string name="details_price">产品价格：</string>
    <string name="details_producing_area">产品产地：</string>
    <string name="details_trait">产品特点介绍：百姓图腾 手工恒温56°紫砂CEO杯，恒温紫砂CEO杯，养生佳品，用恒定温度呵护血管健康。全天24小时为你提供56°的贴心守望。恒心56°，是对心脏最好的温度.高端定制姓氏家徽，为你打造独一无二的专属尊贵。</string>
    <string name="address">收货地址：广东省 深圳市 龙岗区 布吉西环路88号 文博宫 一号馆 3楼 利世机构</string>
    <string name="password_hint">密码由6-20位字符组成，包含至少两种以上字母、数字，或者半角字符，区分大小写</string>
    <string name="edittext_code_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="edittext_password_digits">.,_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="rob_text">抢购中，先下单先得哦</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="cancel_order">取消订单后，本单享有的优惠可能会一并取消。是否继续？</string>
    <string name="qqAppId">1105736969</string>
    <string name="magazine_item3_1">《保险生活》是目前市场上唯一传播正确保险理念的公开刊物   具有无可争议的公信力。</string>
    <string name="magazine_item3_2">杂志内容涵盖意外、健康、养老、女性、少儿、理财、理赔案例等 与保险密切相关的方面。解构社会热点，解决人生难题 把保险与生活紧密</string>
    <string name="magazine_item3_3">每两月一期一对一的服务，及杂志固有的广泛传阅性 使之具有持续的传播力与影响力！</string>
    <string name="magazine_item3_4">个性定制具有专属性与极强的针对性！</string>
    <string name="btn_scroll_view">ScrollView demo</string>
    <string name="btn_list_view">ListView demo</string>
    <string name="header_hint_refresh_normal">Pull to refresh</string>
    <string name="header_hint_refresh_ready">Release to refresh</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">Time：</string>
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>
    <string-array name="province_item">
        <item>北京</item>
        <item>天津</item>
        <item>河北</item>
        <item>山西</item>
        <item>内蒙古</item>
        <item>辽宁</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>上海</item>
        <item>江苏</item>
        <item>浙江</item>
        <item>安徽</item>
        <item>福建</item>
        <item>江西</item>
        <item>山东</item>
        <item>河南</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>广东</item>
        <item>广西</item>
        <item>海南</item>
        <item>重庆</item>
        <item>四川</item>
        <item>贵州</item>
        <item>云南</item>
        <item>西藏</item>
        <item>陕西</item>
        <item>甘肃</item>
        <item>青海</item>
        <item>宁夏</item>
        <item>新疆</item>
        <item>香港</item>
        <item>澳门</item>
        <item>台湾</item>
    </string-array>
    <string-array name="beijin_province_item">
        <item>北京</item>
    </string-array>
    <string-array name="tianjin_province_item">
        <item>天津</item>
    </string-array>
    <string-array name="heibei_province_item">
        <item>石家庄</item>
        <item>唐山</item>
        <item>秦皇岛</item>
        <item>邯郸</item>
        <item>邢台</item>
        <item>保定</item>
        <item>张家口</item>
        <item>承德</item>
        <item>沧州</item>
        <item>廊坊</item>
        <item>衡水</item>
    </string-array>
    <string-array name="shanxi1_province_item">
        <item>太原</item>
        <item>大同</item>
        <item>阳泉</item>
        <item>长治</item>
        <item>晋城</item>
        <item>朔州</item>
        <item>晋中</item>
        <item>运城</item>
        <item>忻州</item>
        <item>临汾</item>
        <item>吕梁</item>
    </string-array>
    <string-array name="neimenggu_province_item">
        <item>呼和浩特</item>
        <item>包头</item>
        <item>乌海</item>
        <item>赤峰</item>
        <item>通辽</item>
        <item>鄂尔多斯</item>
        <item>呼伦贝尔</item>
        <item>巴彦淖尔</item>
        <item>乌兰察布</item>
        <item>兴安盟</item>
        <item>锡林郭勒盟</item>
        <item>阿拉善盟</item>
    </string-array>
    <string-array name="liaoning_province_item">
        <item>沈阳</item>
        <item>大连</item>
        <item>鞍山</item>
        <item>抚顺</item>
        <item>本溪</item>
        <item>丹东</item>
        <item>锦州</item>
        <item>营口</item>
        <item>阜新</item>
        <item>辽阳</item>
        <item>盘锦</item>
        <item>铁岭</item>
        <item>朝阳</item>
        <item>葫芦岛</item>
    </string-array>
    <string-array name="jilin_province_item">
        <item>长春</item>
        <item>吉林</item>
        <item>四平</item>
        <item>辽源</item>
        <item>通化</item>
        <item>白山</item>
        <item>松原</item>
        <item>白城</item>
        <item>延边</item>
    </string-array>
    <string-array name="heilongjiang_province_item">
        <item>哈尔滨</item>
        <item>齐齐哈尔</item>
        <item>鸡西</item>
        <item>鹤岗</item>
        <item>双鸭山</item>
        <item>大庆</item>
        <item>伊春</item>
        <item>佳木斯</item>
        <item>七台河</item>
        <item>牡丹江</item>
        <item>黑河</item>
        <item>绥化</item>
        <item>大兴安岭</item>
    </string-array>
    <string-array name="shanghai_province_item">
        <item>上海</item>
    </string-array>
    <string-array name="jiangsu_province_item">
        <item>南京</item>
        <item>无锡</item>
        <item>徐州</item>
        <item>常州</item>
        <item>苏州</item>
        <item>南通</item>
        <item>连云港</item>
        <item>淮安</item>
        <item>盐城</item>
        <item>扬州</item>
        <item>镇江</item>
        <item>泰州</item>
        <item>宿迁</item>
    </string-array>
    <string-array name="zhejiang_province_item">
        <item>杭州</item>
        <item>宁波</item>
        <item>温州</item>
        <item>嘉兴</item>
        <item>湖州</item>
        <item>绍兴</item>
        <item>金华</item>
        <item>衢州</item>
        <item>舟山</item>
        <item>台州</item>
        <item>丽水</item>
    </string-array>
    <string-array name="anhui_province_item">
        <item>合肥</item>
        <item>芜湖</item>
        <item>蚌埠</item>
        <item>淮南</item>
        <item>马鞍山</item>
        <item>淮北</item>
        <item>铜陵</item>
        <item>安庆</item>
        <item>黄山</item>
        <item>滁州</item>
        <item>阜阳</item>
        <item>宿州</item>
        <item>巢湖</item>
        <item>六安</item>
        <item>亳州</item>
        <item>池州</item>
        <item>宣城</item>
    </string-array>
    <string-array name="fujian_province_item">
        <item>福州</item>
        <item>厦门</item>
        <item>莆田</item>
        <item>三明</item>
        <item>泉州</item>
        <item>漳州</item>
        <item>南平</item>
        <item>龙岩</item>
        <item>宁德</item>
    </string-array>
    <string-array name="jiangxi_province_item">
        <item>南昌</item>
        <item>景德镇</item>
        <item>萍乡</item>
        <item>九江</item>
        <item>新余</item>
        <item>鹰潭</item>
        <item>赣州</item>
        <item>吉安</item>
        <item>宜春</item>
        <item>抚州</item>
        <item>上饶</item>
    </string-array>
    <string-array name="shandong_province_item">
        <item>济南</item>
        <item>青岛</item>
        <item>淄博</item>
        <item>枣庄</item>
        <item>东营</item>
        <item>烟台</item>
        <item>潍坊</item>
        <item>济宁</item>
        <item>泰安</item>
        <item>威海</item>
        <item>日照</item>
        <item>莱芜</item>
        <item>临沂</item>
        <item>德州</item>
        <item>聊城</item>
        <item>滨州</item>
        <item>荷泽</item>
    </string-array>
    <string-array name="henan_province_item">
        <item>郑州</item>
        <item>开封</item>
        <item>洛阳</item>
        <item>平顶山</item>
        <item>安阳</item>
        <item>鹤壁</item>
        <item>新乡</item>
        <item>焦作</item>
        <item>濮阳</item>
        <item>许昌</item>
        <item>漯河</item>
        <item>三门峡</item>
        <item>南阳</item>
        <item>商丘</item>
        <item>信阳</item>
        <item>周口</item>
        <item>驻马店</item>
    </string-array>
    <string-array name="hubei_province_item">
        <item>武汉</item>
        <item>黄石</item>
        <item>十堰</item>
        <item>宜昌</item>
        <item>襄樊</item>
        <item>鄂州</item>
        <item>荆门</item>
        <item>孝感</item>
        <item>荆州</item>
        <item>黄冈</item>
        <item>咸宁</item>
        <item>随州</item>
        <item>恩施</item>
        <item>神农架</item>
    </string-array>
    <string-array name="hunan_province_item">
        <item>长沙</item>
        <item>株洲</item>
        <item>湘潭</item>
        <item>衡阳</item>
        <item>邵阳</item>
        <item>岳阳</item>
        <item>常德</item>
        <item>张家界</item>
        <item>益阳</item>
        <item>郴州</item>
        <item>永州</item>
        <item>怀化</item>
        <item>娄底</item>
        <item>湘西</item>
    </string-array>
    <string-array name="guangdong_province_item">
        <item>广州</item>
        <item>韶关</item>
        <item>深圳</item>
        <item>珠海</item>
        <item>汕头</item>
        <item>佛山</item>
        <item>江门</item>
        <item>湛江</item>
        <item>茂名</item>
        <item>肇庆</item>
        <item>惠州</item>
        <item>梅州</item>
        <item>汕尾</item>
        <item>河源</item>
        <item>阳江</item>
        <item>清远</item>
        <item>东莞</item>
        <item>中山</item>
        <item>潮州</item>
        <item>揭阳</item>
        <item>云浮</item>
    </string-array>
    <string-array name="guangxi_province_item">
        <item>南宁</item>
        <item>柳州</item>
        <item>桂林</item>
        <item>梧州</item>
        <item>北海</item>
        <item>防城港</item>
        <item></item>
        <item>钦州</item>
        <item>贵港</item>
        <item>玉林</item>
        <item>百色</item>
        <item>贺州</item>
        <item>河池</item>
        <item>来宾</item>
        <item>崇左</item>
    </string-array>
    <string-array name="hainan_province_item">
        <item>海口</item>
        <item>三亚</item>
    </string-array>
    <string-array name="chongqing_province_item">
        <item>重庆</item>
    </string-array>
</resources>