<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_bg_color"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/commodity_photo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/item_padding"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="￥400"
                android:textColor="@color/text_red"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="10dp"
                android:text="(定制)"
                android:textColor="@color/text_red"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="数量：230"
                android:textColor="@color/tv_gray_commodity"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:text="制作周期：2~3周"
                android:textColor="@color/tv_gray_commodity"
                android:textSize="12dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/item_padding"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="已选"
                    android:textColor="@color/tv_gray_commodity"
                    android:textSize="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="尊享版"
                    android:textColor="@color/tv_gray_commodity"
                    android:textSize="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="黄色"
                    android:textColor="@color/tv_gray_commodity"
                    android:textSize="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="16*54cm"
                    android:textColor="@color/tv_gray_commodity"
                    android:textSize="12dp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="4dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center|right"
                android:layout_marginRight="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/circler_commoditydetails"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/item_padding"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:background="#a9a9a9"
            android:gravity="center"
            android:padding="3dp"
            android:singleLine="true"
            android:text="温馨提示：该商品为定制商品，发货时间需了解商品制作周期"
            android:textColor="@color/base_bg_color"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="15dp"
            android:gravity="left"
            android:text="@string/details_brief"
            android:textColor="@color/tv_gray_details"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="15dp"
            android:text="@string/details_name"
            android:textColor="@color/tv_gray_details"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="1dp"
            android:text="@string/details_model"
            android:textColor="@color/tv_gray_details"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="1dp"
            android:text="@string/details_standard"
            android:textColor="@color/tv_gray_details"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="1dp"
            android:text="@string/details_material"
            android:textColor="@color/tv_gray_details"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="1dp"
            android:text="@string/details_price"
            android:textColor="@color/tv_gray_details"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="1dp"
            android:text="@string/details_producing_area"
            android:textColor="@color/tv_gray_details"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="15dp"
            android:text="@string/details_trait"
            android:textColor="@color/tv_gray_details"
            android:textSize="14sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/item_padding"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/store_photo"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/store_home"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/store_collect"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>