<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@color/base_bg_color"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_cart_bottom_all"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:button="@drawable/cart_checked"
            android:checked="false"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:text="@string/text_cart_checkbox"
            android:textColor="#323232"
            android:textSize="14sp"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="6dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_cart_bom_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_cart_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cart_add"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_cartbom_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="0.0"
                        android:textColor="@color/text_red"
                        android:textSize="18sp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/ll_cart_bom_total"
                    android:gravity="right|center_vertical"
                    android:text="不含运费"
                    android:textColor="@color/text_gray"
                    android:textSize="10sp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_cart_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/cart_button_red"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/text_cart_count"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>